# gimer

./: .gitignore  README.md  gimer.spec  pyproject.toml
.cursor/: settings.json
.github/workflows/: release.yml  test.yml
gimer/: __init__.py  cache.py  cli.py  constants.py  git.py  git_utils.py  i18n.py  repositories.py  system.py
gimer/locale/: gimer.pot
gimer/locale/ja/LC_MESSAGES/: gimer.mo  gimer.po
tests/: test_cache.py  test_cli.py  test_git.py  test_git_utils.py  test_repositories.py
